# libmikataarm

src/: mikata_kinematics_test.cpp
test/: CMakeLists.txt  mikata_move_example01.cpp
